tests/tooling/fixtures/native/execution/negative/increment_decrement_bool_target.objc3
module IncrementDecrementBoolTarget;

fn main() -> i32 {
  let flag = true;
  flag++;
  return 0;
}